tools/tests/ui/fail/l1061.cnf
// Test file for error code: L1061
// Expected error: Overflow Mismatch character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
